--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup Elixir
-        uses: actions/setup-node@v1
+        uses: actions/setup-elixir@v1
         with:
           otp-version: '22.2'
           elixir-version: '1.9.4'
