--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,11 @@ jobs:
       - name: Setup Elixir
         uses: actions/setup-elixir@v1
         with:
-          otp-version: '22.2'
-          elixir-version: '1.9.4'
-      - run: mix deps.get
-      - run: mix test
+          otp-version: '23'
+          elixir-version: '1.11.1'
+
+      - name: Install dependencies
+        run: mix deps.get
+      
+      - name: Test
+        run: mix test
