--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -144,3 +144,29 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
+
+  deploy:
+    needs: [test, security, check_format, lint]
+    if: github.ref == 'refs/heads/main'
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+        with:
+          ref: main
+          fetch-depth: 0
+
+      - name: "Setup Python"
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8.1
+
+      - name: "Setup gigalixir"
+        uses: mhanberg/gigalixir-action@v0.4.3
+        with:
+          GIGALIXIR_USERNAME: ${{ secrets.GIGALIXIR_USERNAME }}
+          GIGALIXIR_PASSWORD: ${{ secrets.GIGALIXIR_PASSWORD }}
+          GIGALIXIR_APP: rocketpayy
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
